--- a/app/src/main/res/layout/activity_new_candidate.xml
+++ b/app/src/main/res/layout/activity_new_candidate.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/phone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:maxLength="10"
                 android:inputType="phone" />
         </android.support.design.widget.TextInputLayout>
 
