--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -32,7 +32,7 @@
 
             <TextView
                 style="@style/cardText"
-                android:text="old applications" />
+                android:text="all applications" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
