--- a/app/src/main/res/layout/activity_new_candidate.xml
+++ b/app/src/main/res/layout/activity_new_candidate.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,74 +7,105 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="20dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fifteen"
         android:orientation="vertical">
 
-        <android.support.design.widget.TextInputLayout
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="@dimen/ten"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/proceed"
+                style="@style/fillButtons"
+                android:layout_marginEnd="@dimen/ten"
+                android:text="Proceed" />
+
+            <Button
+                android:id="@+id/clear"
+                style="@style/whiteButtons"
+                android:text="clear fields" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1.5"
+                android:fontFamily="@font/gothic"
+                android:text="Tap on image to pick new:"
+                android:textSize="18sp" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/photoInput"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:src="@drawable/employee_tie" />
+        </LinearLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/nameTIL"
+            style="@style/TIL"
             android:hint="Enter Candidate Name">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="textPersonName" />
+                style="@style/TIET" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/phoneTIL"
+            style="@style/TIL"
             android:hint="Enter Candidate Phone Number">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/phone"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:maxLength="10"
-                android:inputType="phone" />
+                style="@style/TIET"
+                android:inputType="phone"
+                android:maxLength="10" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/posTIL"
+            style="@style/TIL"
             android:hint="Enter Preferable Position">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/position"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="text" />
+                style="@style/TIET" />
         </android.support.design.widget.TextInputLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/five"
+            android:layout_marginTop="@dimen/fifteen"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/gothic"
                 android:text="Choose Status: "
-                android:textSize="18dp" />
+                android:textSize="18sp" />
 
             <Spinner
                 android:id="@+id/status"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/twenty" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/proceed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Proceed" />
-
-        <Button
-            android:id="@+id/delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Delete all" />
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+
+</ScrollView>
