--- a/app/src/main/res/layout/candidate_tile.xml
+++ b/app/src/main/res/layout/candidate_tile.xml
@@ -14,16 +14,17 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/photoTile"
             android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:src="@drawable/happy" />
+            android:layout_height="70dp"
+            android:layout_marginBottom="@dimen/five"
+            android:layout_marginEnd="@dimen/five"
+            android:layout_marginTop="@dimen/five"
+            android:layout_weight="1.2"
+            android:src="@drawable/employee_tie" />
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:gravity=""
             android:orientation="vertical">
 
             <TextView
@@ -42,13 +43,21 @@
                 android:fontFamily="@font/gothic"
                 android:text="Phone"
                 android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/posTile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/gothic"
+                android:text="Position"
+                android:textSize="13sp" />
         </LinearLayout>
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:layout_marginBottom="12dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:background="@android:color/darker_gray" />
 
         <TextView
@@ -57,8 +66,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:fontFamily="@font/gothic"
-            android:paddingStart="10dp"
+            android:gravity="center"
+            android:paddingStart="@dimen/five"
             android:text="Status"
-            android:textSize="20sp" />
+            android:textSize="19sp" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
