--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -27,7 +27,7 @@
         <android.support.v7.widget.CardView
             android:id="@+id/red"
             style="@style/card"
-            android:layout_marginTop="@dimen/cardDimens"
+            android:layout_marginTop="@dimen/fifteen"
             app:cardBackgroundColor="@color/red">
 
             <TextView
@@ -38,7 +38,7 @@
         <android.support.v7.widget.CardView
             android:id="@+id/blue"
             style="@style/card"
-            android:layout_marginTop="@dimen/cardDimens"
+            android:layout_marginTop="@dimen/fifteen"
             app:cardBackgroundColor="@color/blue">
 
             <TextView
