--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="blueDark">#0DAFCC</color>
 
     <color name="defaultTextColor">#8A000000</color>
+    <color name="defaultBGColor">#FAFAFA</color>
 
 </resources>
