--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -8,4 +8,5 @@
     android:padding="@dimen/ten"
     android:singleLine="true"
     android:textColor="@color/defaultTextColor"
+    android:textAlignment="center"
     android:textSize="18sp" />
