--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="ten">10dp</dimen>
     <dimen name="fifteen">15dp</dimen>
     <dimen name="twenty">20dp</dimen>
+    <dimen name="fifty">50dp</dimen>
 </resources>
