--- a/app/src/main/res/layout/activity_all_applications.xml
+++ b/app/src/main/res/layout/activity_all_applications.xml
@@ -9,26 +9,57 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginBottom="@dimen/ten"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/delete"
-            style="@style/fillButtons"
-            android:layout_marginEnd="@dimen/ten"
-            android:text="Delete All" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/sortbybutton"
-            style="@style/whiteButtons"
-            android:text="Sort By▼" />
+            <Button
+                android:id="@+id/delete"
+                style="@style/fillButtons"
+                android:layout_marginEnd="@dimen/ten"
+                android:backgroundTint="@color/red"
+                android:text="Delete All" />
+
+            <Button
+                android:id="@+id/sortbybutton"
+                style="@style/whiteButtons"
+                android:text="Sort By▼" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="@dimen/ten"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/push"
+                style="@style/fillButtons"
+                android:layout_marginEnd="@dimen/ten"
+                android:backgroundTint="@color/yellow"
+                android:text="Upload" />
+
+            <Button
+                android:id="@+id/retrieve"
+                style="@style/fillButtons"
+                android:backgroundTint="@color/blue"
+                android:text="Retrieve" />
+        </LinearLayout>
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/oldCandidateList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/candidate_tile" />
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ListView
+            android:id="@+id/oldCandidateList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/candidate_tile" />
+    </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
