--- a/app/src/main/res/layout/activity_all_applications.xml
+++ b/app/src/main/res/layout/activity_all_applications.xml
@@ -49,6 +49,11 @@
                 android:backgroundTint="@color/blue"
                 android:text="Retrieve" />
         </LinearLayout>
+
+        <android.support.v7.widget.SearchView
+            android:id="@+id/search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <android.support.constraint.ConstraintLayout
